src/Components/Models/ModelCard/ModelCard.scss
.model-card {
  box-shadow: var(--box-shadow);
  border-radius: var(--border-radius);

  .header {
    padding: 20px;
    color: #fff;
    margin: 0;
    border-radius: 3px 3px 0 0;
    border-bottom: 1px solid var(--light-gray);
  }

  .bar-graph {
    padding: 35px 35px 0;
  }

  .actions {
    padding: 10px 35px 20px;

    .toggle {
      position: absolute;
      margin: 0;
      left: 50px;
      bottom: 25px;
    }

    .buttons {
      position: relative;
      margin-left: 20px;
      border-radius: 50%;
      height: 35px;
      width: 35px;
      padding-top: 9px;
      transition: all 200ms ease;
      cursor: pointer;

      svg {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
      }

      &:hover {
        background-color: var(--light-gray);
      }
    }
  }
}

